[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "capture-packets"
authors = [{name = "Seth Michael Larson", email = "sethmichaellarson@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[tool.flit.module]
name = "capture_packets"

[project.urls]
Home = "https://github.com/sethmlarson/capture-packets"
