[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "capture-packets"
authors = [{name = "Seth Michael Larson", email = "sethmichaellarson@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.6"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/sethmlarson/capture-packets"

[tool.flit.module]
name = "capture_packets"
